objects/Historical_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Ability_to_understand_Issue__c</fullName>
        <label>Ability to understand Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legacy_ID__c</fullName>
        <label>Account Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historical Surveys</relationshipLabel>
        <relationshipName>Historical_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Legacy_ID__c</fullName>
        <label>Case Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clear_Instructions__c</fullName>
        <description>Added to migrate data from Passkey Surveys</description>
        <label>Clear Instructions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultative_Approach__c</fullName>
        <label>Consultative Approach</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Legacy_ID__c</fullName>
        <label>Contact Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Historical Surveys</relationshipLabel>
        <relationshipName>Historical_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courtesy_and_Professionalism__c</fullName>
        <label>Courtesy and Professionalism</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Completion__c</fullName>
        <inlineHelpText>Date/Time when the customer submitted the response</inlineHelpText>
        <label>Date/Time of Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ease_of_Contacting_Support__c</fullName>
        <label>Ease of Contacting Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Easy_for_me_to_handle__c</fullName>
        <label>Easy for me to handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Project_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End of Project Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expertise_and_Knowledge__c</fullName>
        <label>Expertise and Knowledge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_times_you_contact__c</fullName>
        <label>How many times you contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 time</fullName>
                </value>
                <value>
                    <fullName>2 times</fullName>
                </value>
                <value>
                    <fullName>3 times</fullName>
                </value>
                <value>
                    <fullName>more than 3 times</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influenced_Rating__c</fullName>
        <label>Influenced Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product (features, usability, reliability, other)</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>The issue being resolved/not resolved</fullName>
                </value>
                <value>
                    <fullName>Consultative approach</fullName>
                </value>
                <value>
                    <fullName>Ability to understand the issue</fullName>
                </value>
                <value>
                    <fullName>Ability to keep commitments</fullName>
                </value>
                <value>
                    <fullName>Ease/difficulty contacting support throughout the entire process</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Other (Please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influenced_Rating_of_Product__c</fullName>
        <label>Influenced Rating of Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ease of troubleshooting issues within the product</fullName>
                </value>
                <value>
                    <fullName>Navigation</fullName>
                </value>
                <value>
                    <fullName>Product Functionality (product features, options available)</fullName>
                </value>
                <value>
                    <fullName>Product Responsiveness or Speed</fullName>
                </value>
                <value>
                    <fullName>Helpfulness of product documentation</fullName>
                </value>
                <value>
                    <fullName>Variety of features offered</fullName>
                </value>
                <value>
                    <fullName>Product usability (ease of use)</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Response_Time__c</fullName>
        <label>Initial Response Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved__c</fullName>
        <description>Added to migrate legacy passkey survey data</description>
        <label>Issue Resolved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_being_Resolved__c</fullName>
        <label>Issue being Resolved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keep_Commitments__c</fullName>
        <label>Keep Commitments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <label>Knowledge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_Name__c</fullName>
        <label>Legacy Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedDate__c</fullName>
        <label>Legacy CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_RecordType_Name__c</fullName>
        <label>Legacy RecordType Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Source ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Number__c</fullName>
        <label>Legacy Survey Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <label>Legacy System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Comment__c</fullName>
        <label>Manager Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <label>Manager's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>More_Accurate__c</fullName>
        <label>More Accurate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The product had a limitation or issue</fullName>
                </value>
                <value>
                    <fullName>The agent lacked knowledge or resourcefulness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Date__c</fullName>
        <inlineHelpText>Date the NPS was taken</inlineHelpText>
        <label>NPS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Product__c</fullName>
        <label>NPS Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Genie Connect</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>StarCite</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Promoter_Reason__c</fullName>
        <label>Net Promoter Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Our_Speed__c</fullName>
        <label>Our Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Too Slow</fullName>
                </value>
                <value>
                    <fullName>Just Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Experience__c</fullName>
        <label>Overall Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_with_Product__c</fullName>
        <label>Overall Satisfaction with Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_with_service_Num__c</fullName>
        <formula>CASE(Overall_Satisfaction_with_service__c,'Very Satisfied',5,'Satisfied',4,'Neither Satisfied nor Dissatisfied',3,'Dissatisfied',2,'Very Dissatisfied',1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Satisfaction with service(#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_with_service__c</fullName>
        <label>Overall Satisfaction with service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Average_CSAT_Score__c</fullName>
        <formula>(PS_Level_of_Knowledge__c+
PS_Quality_of_Work__c+
PS_Communication__c+
PS_Value__c)/4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average of PS Level of Knowledge, PS Quality of Work, PS Communication, PS Value</inlineHelpText>
        <label>PS Average CSAT Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Communication_Score__c</fullName>
        <formula>CASE(TEXT (PS_Communication__c),
"1", 1,
"2", 2,
"3", 3,
"4", 4,
"5", 5,
"6", 6,
"7", 7,
"8", 8,
"9", 9,
"10", 10,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Communication Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Communication__c</fullName>
        <description>How would you rate the effectiveness of our communications and processes?</description>
        <inlineHelpText>How would you rate the effectiveness of our communications and processes?</inlineHelpText>
        <label>PS Communication</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Level_of_Knowledge_Score__c</fullName>
        <formula>CASE(TEXT (PS_Level_of_Knowledge__c),
"1", 1,
"2", 2,
"3", 3,
"4", 4,
"5", 5,
"6", 6,
"7", 7,
"8", 8,
"9", 9,
"10", 10,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Level of Knowledge Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Level_of_Knowledge__c</fullName>
        <description>How satisfied are you with the level of knowledge demonstrated by Lanyon Professional Services?</description>
        <label>PS Level of Knowledge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Quality_of_Work_Score__c</fullName>
        <formula>CASE(TEXT (PS_Quality_of_Work__c),
"1", 1,
"2", 2,
"3", 3,
"4", 4,
"5", 5,
"6", 6,
"7", 7,
"8", 8,
"9", 9,
"10", 10,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Quality of Work Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Quality_of_Work__c</fullName>
        <description>How satisfied are you with the quality of work delivered by Lanyon Professional Services?</description>
        <inlineHelpText>How satisfied are you with the quality of work delivered by Lanyon Professional Services?</inlineHelpText>
        <label>PS Quality of Work</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Reccomend_Score__c</fullName>
        <formula>CASE(TEXT ( PS_Recommendation__c ),
"1", 1,
"2", 2,
"3", 3,
"4", 4,
"5", 5,
"6", 6,
"7", 7,
"8", 8,
"9", 9,
"10", 10,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Reccomend Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Reccomend__c</fullName>
        <description>On a scale from 0-10, with 0 being “not likely” and 10 being “definitely”, how likely is it that you would recommend Lanyon to a colleague?</description>
        <label>PS Reccomend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <default>true</default>
                    <label>10</label>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Recommend_Reason__c</fullName>
        <inlineHelpText>What is the reason for the recommendation score given?</inlineHelpText>
        <label>NPS Recommend Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PS_Recommendation__c</fullName>
        <description>On a scale from 0-10, with 0 being “not likely” and 10 being “definitely”, how likely is it that you would recommend Lanyon to a colleague?</description>
        <label>NPS Recommendation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Value_Score__c</fullName>
        <formula>CASE(TEXT (PS_Value__c),
"1", 1,
"2", 2,
"3", 3,
"4", 4,
"5", 5,
"6", 6,
"7", 7,
"8", 8,
"9", 9,
"10", 10,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Value Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Value__c</fullName>
        <description>How would you rate the overall value added to your organization by Lanyon Professional Services?</description>
        <inlineHelpText>How would you rate the overall value added to your organization by Lanyon Professional Services?</inlineHelpText>
        <label>PS Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Written_Feedback__c</fullName>
        <description>Please let us know how we could provide better service and value to you. (text field, 400 characters max)</description>
        <label>PS Written Feedback</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <label>Professionalism</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Legacy_ID__c</fullName>
        <label>Project Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Project__r.pse__Project_Manager__r.FirstName +  Project__r.pse__Project_Manager__r.LastName</formula>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recommend_Lanyon_Overall__c</fullName>
        <description>How likely is it that you would recommend Lanyon Overall to a colleague?</description>
        <inlineHelpText>How likely is it that you would recommend Lanyon Overall to a colleague?</inlineHelpText>
        <label>Recommend Lanyon Overall?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Surveys (Region)</relationshipLabel>
        <relationshipName>Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_in_last_120_days__c</fullName>
        <description>Used for Project Health calculations</description>
        <formula>IF(
  TODAY()-DATEVALUE(CreatedDate)&lt;120,TRUE,FALSE
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Project Health calculations</inlineHelpText>
        <label>Sent in last 120 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_in_last_90_days__c</fullName>
        <description>Used for Project Health calculations</description>
        <formula>IF(
  TODAY()-DATEVALUE(CreatedDate)&lt;90,TRUE,FALSE
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Project Health calculations</inlineHelpText>
        <label>Sent in last 90 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Indicates whether or not the client has completed this survey.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understand_the_Issue__c</fullName>
        <description>Added to migrate legacy data from Passkey survey</description>
        <label>Understand the Issue</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Historical Survey</label>
    <nameField>
        <displayFormat>HS-{00000}</displayFormat>
        <label>Historical Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>ProServ</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Historical_Survey__c.Professional_Services</value>
        </filters>
        <label>Professional Services</label>
    </listViews>
    <recordTypes>
        <fullName>CSAT</fullName>
        <active>true</active>
        <description>Customer Satisfaction Score Sent Out Automatically when a Case is Closed</description>
        <label>CSAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>NPS</fullName>
        <active>true</active>
        <description>Used for manual NPS surveys</description>
        <label>NPS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional_Services</fullName>
        <active>true</active>
        <description>A survey will be sent to the customer when the record is saved</description>
        <label>Professional Services</label>
    </recordTypes>
</CustomObject>